[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[project]
name = "XMLTK"
version = "1.0.0"
authors = [{ name = "KrazyManJ" }]
description = "Package to create Tkinter GUI using XML Syntax."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "pyglet",
    "xml",
    "warnings",
    "uuid",
    "inspect"
]
[project.urls]
"Repository" = "https://github.com/KrazyManJ/XMLTK"
"Bug Tracker" = "https://github.com/KrazyManJ/XMLTK/issues"